[package]
name = "ufwlog"
version = "0.2.1"
edition.workspace = true
description = "A program to parse, format and export ufw log."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.8"

[dev-dependencies]
assert_cmd = "2.0.16"

[lib]
name = "ufwlog"
path = "src/lib.rs"

[workspace]
members = [
    "cli",
]

[workspace.package]
edition = "2021"
authors = ["hms5232 <hms5232@hhming.moe>"]
license = "MPL-2"
repository = "https://github.com/hms5232/ufwlog"
