[package]
name = "ufwlog"
version.workspace = true
edition.workspace = true
description = "A library to parse, format and export ufw log."
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ufw", "log"]
categories = ["parser-implementations"]
include = ["/src", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]

[lib]
name = "ufwlog"
path = "src/lib.rs"

[workspace]
members = [
    "cli",
]
default-members = ["cli"]

[workspace.package]
version = "0.3.0-beta.2"
edition = "2021"
authors = ["hms5232 <hms5232@hhming.moe>"]
license = "MPL-2.0"
repository = "https://github.com/hms5232/ufwlog"
