[package]
name = "ufwlog-cli"
version = "0.1.0"
edition.workspace = true
description = "A CLI to parse, format and export ufw log."
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.38"
csv = "1.3.0"
indicatif = "0.17.8"
ufwlog = { path = ".." }

[dev-dependencies]
assert_cmd = "2.0.16"

[[bin]]
name = "ufwlog"
path = "src/main.rs"
